--- a/index.html
+++ b/index.html
@@ -1,14 +1,69 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Food Foundation</title>
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet" type"text/css">
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="js/scripts.js"></script>
-  </head>
-  <body>
-      
-  </body>
+<head>
+ <title>Astroworld Corp</title>
+ <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+ <link href="css/styles.css" rel="stylesheet" type="text/css">
+ <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+ <script src="js/scripts.js"></script>
+
+</head>
+<body>
+ <div class="container-fluid">
+ <div class="jumbotron">
+ <h1>ASTROWORLD FOOD FOUNDATION</h1>
+ </div>
+ </div>
+ <div class="container">
+ <div class="row">
+ <div class="col-md-3">
+ <div class="dropdown">
+   <!-- <button class="dropbtn">Mexican food</button>
+   <div class="dropdown-content">
+     <a href="Chef Specials.html">Chef's Especial</a>
+     <a href="Starters.html">Starter meals</a>
+     <a href="Main Course.html">Course meals</a>
+     <a href="Desserts.html">Desserts</a>
+     <a href="cocktails.html">Cocktail</a>
+   </div> -->
+
+ </div>
+ </div>
+ <div class="col-md-3">
+ <div class="dropdown">
+   <button class="dropbtn">Mediterranean Food</button>
+   <div class="dropdown-content">
+     <a href="Chef-specials/Chef Specials.html">Chef's Especial</a>
+     <a href="Starters/Starters.html">Starter meals</a>
+     <a href="Main-course/Main Course.html">Course meals</a>
+     <a href="Desserts/Desserts.html">Desserts</a>
+
+   </div>
+ </div>
+ </div>
+
+ <!-- <div class="col-md-3">
+ <div class="dropdown">
+   <button class="dropbtn">Ethiopian Food</button>
+   <div class="dropdown-content">
+     <a href="chef.html">Chef's Especial</a>
+     <a href="starter.html">Starter meals</a>
+     <a href="course.html">Course meals</a>
+     <a href="dessert.html">Desserts</a>
+
+   </div>
+ </div>
+ </div>
+
+ <div class="col-md-3">
+ <div class="dropdown">
+   <button class="dropbtn">Cocktail Specials</button>
+   <div class="dropdown-content">
+     <a href="files/chef.html">Chef's Especial</a>
+     <a href="files/starter.html">Regulars</a>
+   </div>
+ </div>
+</div> -->
+</div>
+</body>
 </html>
