modified the html file

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <div class="container-fluid">
   <div class="jumbotron">
-  <h1>ASTROWORLD FOOD FOUNDATION</h1>
+  <h1>ASTROWORLD FOOD.</h1>
   </div>
   </div>
 
