--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <div class="w3-yellow">
   <button id="openNav" class="w3-button w3-teal w3-xlarge" onclick="w3_open()">&#9776;</button>
   <div class="w3-container">
-  <h1>ASTROWORLD FOOD FOUNDATION</h1>
+  <h1>ASTROWORLD FOOD</h1>
 </div>
 </div>
 
